# FirstLight

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: n1.example.yaml  tns.example.env
scripts/: run_once_from_avro_dir.py
src/firstlight/: cli.py
src/firstlight/niches/: n1_hostless_fast.py
src/firstlight/pipeline/: normalize.py  runner.py
src/firstlight/storage/: db.py
src/firstlight/tns/: client.py  fink_resolver.py  submit_stub.py
src/firstlight/utils/: fits_min.py  time.py
